<resources>
    <string name="app_name">ОРИОКС</string>
    <string name="form_exam">Экзамен</string>
    <string name="form_credit">Зачёт</string>
    <string name="form_graded_credit">Дифференциированный зачёт</string>
    <string name="form_graded_credit_short">Д. Зачёт</string>
    <string name="subjects">Дисциплины</string>
    <string name="debts">Долги</string>
    <string name="none">-</string>
    <string name="settings">Настройки</string>
    <string name="faq">FAQ</string>
    <string name="schedule">Расписание</string>
    <string name="learning">Обучение</string>
    <string name="news">Новости</string>
    <string name="activities">Контрольные мероприятия</string>
    <string name="screen_placeholder_title">Screen: %1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="form_diploma">Защита ВКР</string>
    <string name="test">Контрольное мероприятие</string>
    <string name="rank">Балл</string>
    <string name="test_max_rank">из %1$d</string>
    <string name="week_short">нед.</string>
    <string name="subject_title">Название дисциплины</string>
    <string name="student_number">Номер студенческого билета</string>
    <string name="password">Пароль</string>
    <string name="remember_password">Запомнить пароль</string>
    <string name="log_in">Войти</string>
    <string name="error_wrong_login_length">Длина должна быть ровно 7 символов</string>
    <string name="error_empty_field">Поле не должно быть пустым</string>
    <string name="error_password_too_short">Пароль слишком короткий</string>
</resources>
