<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_newspaper_black_24dp"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_learning"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/learning" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>

</menu>
